new changes 17/09/19